fix(demo): proper card shadow in dark mode

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -50,8 +50,9 @@
   }
 
   .app-card {
-    @apply rounded app-bg-100 app-text-secondary
-    shadow hover:shadow-lg dark:shadow-gray-500
+    @apply rounded app-bg-100 app-text-secondary 
+    shadow hover:shadow-2xl dark:shadow-black 
+    relative hover:z-10
   }
 }
 
